<resources>
    <string name="app_name">AutomatedLoanApprovalApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>
    <string name="credit_score">Credit Score:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maximum_loan_amount">Maximum Credit:</string>
    <string name="enter_loan_amount">Enter Loan Amount</string>
    <string name="title_activity_eligibility_check">EligibilityCheckActivity</string>
    <string name="customer_name">Customer name</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="no_content_found">No content found!!</string>
    <string name="loan_type">Loan Type</string>
    <string name="add_user_floating_button">add user floating button</string>
    <string name="notifications">notifications</string>
    <string name="account">account</string>
    <string name="officer_bottom_floating_button">Officer bottom floating button</string>
</resources>