<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.loanofficer.TransactionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appBarLayout"
            >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                app:menu="@menu/top_app_bar"
                app:navigationIcon="@drawable/back_arrow"
                app:title="Transactions"
                app:titleCentered="true"
                android:background="#6AAE20"
                app:layout_scrollFlags="enterAlways|snap"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.AppBarLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            >



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customerNameInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:hint="@string/customer_name">

                    <AutoCompleteTextView
                        android:id="@+id/autocomplete_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:textAllCaps="true"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/transactionIdsTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/transaction_id">

                <AutoCompleteTextView
                    android:id="@+id/autocomplete_text_tid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:textAllCaps="true"
                    />
            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no_content"
            android:text="@string/no_content_found"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:visibility="gone"

            />
        <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerView"/>
    </LinearLayout>




    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_app_bar"
        android:layout_gravity="bottom"
        android:backgroundTint="#6AAE20"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="50dp"

        >

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/bottom_menu"
            android:id="@+id/bottom_navigationView"
            app:labelVisibilityMode="labeled"
            android:background="#0000"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_add"
        app:layout_anchor="@id/bottom_app_bar"
        android:id="@+id/fabAddLoan"
        app:maxImageSize="40dp" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>