<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.customer.LoanApplicationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appBarLayout"
            >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                app:menu="@menu/top_app_bar"
                app:navigationIcon="@drawable/back_arrow"
                app:title="Loan Application"
                android:background="#6AAE20"
                app:layout_scrollFlags="enterAlways|snap"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/credit_score"
                        android:textColor="@color/green"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/creditScoreTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"
                        android:textColor="@color/green"
                        android:textSize="16sp"/>
                </LinearLayout>
                <LinearLayout
                   android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maximum_loan_amount"
                        android:textColor="@color/green"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/loanAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"
                        android:textColor="@color/green"
                        android:textSize="16sp"/>

                </LinearLayout>
            </RelativeLayout>




        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerView"/>

        </RelativeLayout>
    </LinearLayout>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_app_bar"
        android:layout_gravity="bottom"
        android:backgroundTint="#6AAE20"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="50dp"

        >

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/bottom_menu"

            android:id="@+id/bottom_navigationView"
            app:labelVisibilityMode="labeled"
            android:background="#0000"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_add"
        app:layout_anchor="@id/bottom_app_bar"
        android:id="@+id/fabAddLoan"
        app:maxImageSize="40dp" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>